--- a/REST/Config/Startup/Startup.cshtml
+++ b/REST/Config/Startup/Startup.cshtml
@@ -2,6 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
     <title>API Doc's</title>
 
     <style>
